# GSCV

./: .gitignore  CMakeLists.txt  GSCV.pro  README.md  camera_setting.cpp  camera_setting.h  camera_setting.ui  cell_color.cpp  cell_color.h  cell_color.ui  color_scheme.cpp  color_scheme.h  color_scheme.ui  default_plot.cpp  default_plot.h  feature_plot.cpp  feature_plot.h  global_variables.cpp  global_variables.h  gscv_import_wizard.cpp  gscv_import_wizard.h  jitter_plot_panel.cpp  jitter_plot_panel.h  jitter_plot_panel.ui  language_manager.cpp  language_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opengl_view_widget.cpp  opengl_view_widget.h  palette.cpp  palette.h  plot_base.cpp  plot_base.h  right_panel_manager.cpp  right_panel_manager.h  sc_packer.cpp  sc_packer.h  (+15 more)
doc/en_US/: 0introduction.html  1install.html  2main_interface.html  3draw_feature_plot.html  4custom_color_scheme.html  5camera_setting.html  6settings.html  7import_seurat_object.html  8export_viewport.html
doc/zh_CN/: 0introduction.html  1install.html  2main_interface.html  3draw_feature_plot.html  4custom_color_scheme.html  5camera_setting.html  6settings.html  7import_seurat_object.html  8export_viewport.html
language/: en_US.ts  zh_CN.ts
shaders/default/: default.frag  default.vert
